Fixed a bug with alignment and pictures

--- a/src/css/material/screenshots/alignment.css
+++ b/src/css/material/screenshots/alignment.css
@@ -1,6 +1,6 @@
 .show-img {
     border-radius: 4px;
-    width: 350px;
+    width: 100%;
 }
 
 .title {
